
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_ArduinoFilterWheel.la
libmmgr_dal_ArduinoFilterWheel_la_SOURCES = FilterWheel.cpp FilterWheel.h
libmmgr_dal_ArduinoFilterWheel_la_LDFLAGS = $(MMDEVAPI_LDFLAGS) 
libmmgr_dal_ArduinoFilterWheel_la_LIBADD = $(MMDEVAPI_LIBADD)

EXTRA_DIST = ArduinoFilterWheel.vcproj license.txt
